--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sippakorn-prem/test-package.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sippakorn-prem/test-package/issues"
+  },
+  "homepage": "https://github.com/sippakorn-prem/test-package#readme"
 }
